# epident-experiments

./: .gitignore  README.md  nextflow.config  pyproject.toml
conf/: bp3.config  epident.config
data/bp3c50id/: bp3c50id.bp3.parquet  bp3c50id.discard.parquet  bp3c50id.filt.parquet  bp3c50id.rsa.parquet
envs/: bp3.yaml  env.yaml  nf-core.yaml
notebooks/: example_code.ipynb
scripts/: bp3c50id.sh
src/epident/: sasa.py  utils.py
workflows/: bp3c50id.nf
workflows/modules/tgen/af3/: environment.yaml
