[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epident"
version = "0.1.0"
authors = [{ name="Jacob Sesate", email="jsesate@tgen.org" }]
description = ""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Repository" = "https://github.com/AltinLab/epident-experiments"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.setuptools]
package-dir = {"" = "src"}